kubernetes/apps/finesse/finesse-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: finesse
  labels:
    name: finesse
